[gd_scene load_steps=7 format=3 uid="uid://ledskvf2j3to"]

[ext_resource type="Script" path="res://screens/entry_view.gd" id="1_h1fsu"]
[ext_resource type="Texture2D" uid="uid://7d1tnm1enmhm" path="res://icons/edit.svg" id="2_o6d6v"]
[ext_resource type="PackedScene" uid="uid://45hrtpqplhvx" path="res://stars.tscn" id="2_tau1d"]
[ext_resource type="Texture2D" uid="uid://bhyfs4rssgxwa" path="res://icons/delete.svg" id="2_vcgkp"]
[ext_resource type="Texture2D" uid="uid://trgyvin57dyf" path="res://icons/confirm.svg" id="5_c21il"]

[sub_resource type="LabelSettings" id="LabelSettings_47pko"]
font_size = 72

[node name="EntryView" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h1fsu")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2
offset_left = 20.0
offset_top = 20.0
offset_right = 1060.0
offset_bottom = 1900.0
horizontal_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 30

[node name="PanelContainer" type="PanelContainer" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
label_settings = SubResource("LabelSettings_47pko")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Photo" type="TextureRect" parent="ScrollContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/v_separation = 30
columns = 2

[node name="DateLabel" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 56
text = "Date"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Date" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 56
text = "
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DescriptionLabel" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 56
text = "Description"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Description" type="TextEdit" parent="ScrollContainer/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 42
editable = false
scroll_fit_content_height = true

[node name="RatingLabel" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 56
text = "Rating"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Stars" parent="ScrollContainer/MarginContainer/VBoxContainer/GridContainer" instance=ExtResource("2_tau1d")]
unique_name_in_owner = true
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -250.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Remove" type="Button" parent="MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
icon = ExtResource("2_vcgkp")
icon_alignment = 1

[node name="Edit" type="Button" parent="MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
icon = ExtResource("2_o6d6v")
icon_alignment = 1

[node name="Confirm" type="Button" parent="MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
icon = ExtResource("5_c21il")
icon_alignment = 1

[connection signal="pressed" from="MarginContainer2/HBoxContainer/Remove" to="." method="_on_remove_pressed"]
[connection signal="pressed" from="MarginContainer2/HBoxContainer/Edit" to="." method="_on_edit_pressed"]
[connection signal="pressed" from="MarginContainer2/HBoxContainer/Confirm" to="." method="_on_confirm_pressed"]
